--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # intellij configs
 .idea/
 
+# Manuall
+modules_result.json
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
