--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-PyYAML~=6.0
-setuptools~=62.6.0
-pika~=1.3.0
-rabbitmq~=0.2.0
+cffi==1.15.1
+pika==1.3.0
+pycparser==2.21
+PyYAML==6.0
+rabbitmq==0.2.0
