Refactor: All modules, Dockerfiles, and configuration

--- a/analyze_module/Dockerfile
+++ b/analyze_module/Dockerfile
@@ -1,8 +1,11 @@
 FROM python:3.8
-COPY requirements.txt messageBroker.py /
-COPY analyze_module/ /
-COPY services/ /
-WORKDIR /
-RUN pip install -r requirements.txt
+WORKDIR /app/
 
-ENTRYPOINT ["python","main.py"]
+COPY requirements.txt message_broker.py /app/analyze_module/
+RUN pip install -r /app/analyze_module/requirements.txt
+
+COPY services/ /app/analyze_module/services/
+COPY  configuration/ /app/configuration/
+COPY analyze_module/ /app/analyze_module/
+
+ENTRYPOINT ["python","/app/analyze_module/main.py"]
